<resources>
    <string name="app_name">Cinemon</string>
    <string name="app_desc">Don\'t miss the latest info about film</string>
    <string name="recommendation">Recommendation</string>
    <string name="now_playing">Now Playing</string>
    <string name="view_all">View all</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="loading">Loading</string>
</resources>